change landing page copy

--- a/app/views/static_pages/_details.html.erb
+++ b/app/views/static_pages/_details.html.erb
@@ -1,24 +1,30 @@
 <div class="table-responsive hidden-sm hidden-xs" style="text-align:left;">  
     <table class="table table-striped">
-        <tbody>
+        <tbody>            
             <tr>
-                <td><strong>Place</strong></td>
+                <td><strong>Course Contents</strong></td>
                 <td>
-                    Work from home or at the TECHRISE workspace. Come in to the workspace once a week for mentor sessions. All of our material is on our online platform, so you can work anytime, anywhere, as long as you finish your work.
-                </td>
-            </tr>
-            <tr>
-                <td><strong>Duration</strong></td>
-                <td>
-                    The entire course will take 2 months. We expect all students to put in atleast 15 hours a week for learning and coding.
+                    Learn Ruby, Ruby on Rails, RSpec, Test Driven Development, HTML/CSS, Bootstrap, JavaScript, Git/Github, Heroku and more essential web development skills by building real-world web applications (<strong>all courses included in 15,000 NPR <strike>20,000</strike> package</strong>). You will have <strong>2 months of intensive training with a personal 1-on-1 mentor</strong>, including problem solving training with real coding interview questions. <a href="/curriculum">Take a look at the TECHRISE curriculum.</a>
                 </td>
             </tr>
             <tr>
                 <td><strong>Price</strong></td>
                 <td>    
-                    <strike>20,000</strike> <strong>15,000 NPR</strong> for 2 months (limited time offer). Read more <%= link_to 'here', pricing_path %>.
+                    <strong>15,000 NPR</strong> <strike>20,000</strike> <strong>for 2 months of intensive training (limited time offer).</strong> You will learn Ruby, Ruby on Rails, RSpec, Test Driven Development, Git, Heroku,  HTML/CSS, Bootstrap, and JavaScript and <strong>build multiple real-world applications with a 1-on-1 personal mentor.</strong> (Everything included in the 15,000 NPR package.) Read more <%= link_to 'here', pricing_path %>.
                 </td>
-            </tr>
+            </tr>   
+            <tr>
+                <td><strong>Duration</strong></td>
+                <td>
+                    The entire course will take 2 months. We expect all students to put in atleast 15 hours a week for learning and coding.
+                </td>
+            </tr>       
+            <tr>
+                <td><strong>Place</strong></td>
+                <td>
+                    Work from home or at the TECHRISE workspace. Come in to the workspace once a week for mentor sessions. All of our material is on our online platform, so you can work anytime, anywhere, as long as you finish your work.
+                </td>
+            </tr>            
             <tr>
                 <td><strong>Requirements</strong></td>
                 <td>    
