--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,13 @@
+tr {
+  font-size: 16px;
+  font-family: 'Lato', sans-serif;
+  line-height: 1.8;
+}
+
+.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {   
+    line-height: 1.8;
+}
+
 .dropdown-toggle .fa-bell {
   font-size: 18px;
 }
