--- a/app/views/static_pages/curriculum.html.erb
+++ b/app/views/static_pages/curriculum.html.erb
@@ -48,7 +48,7 @@
              </div><!--//step-->
         </div><!--//row-->
         
-        <div class="text-center"><%= link_to 'Sign Up to Start Pre-work', new_user_registration_path, class: 'btn btn-cta btn-cta-primary' %></div>
+        <div class="text-center"><%= link_to 'Get Started with Your Web Development Career', new_user_registration_path, class: 'btn btn-cta btn-cta-primary' %></div>
         
     </div><!--//container-->        
 </section><!--//steps-->
