--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -143,16 +143,19 @@
 
           <div class="col-xs-12 col-md-6">
             <ul class="skills_ul">
-              <li>Develop fully featured web applications</li>
-              <li>Learn how to use Github to collaborate with other developers</li>
+              <li>Learn HTML/CSS and Bootstrap to create attractive web interfaces</li>
+              <li>Learn and master the Ruby Language</li>
+              <li>Learn and develop multiple real-world web applications with Ruby on Rails</li>              
+              <li>Learn advanced skills such as Test Driven Development to ensure code quality</li>
               <!-- <li>Write complex algorithms and data structures</li> -->
             </ul>
           </div>
 
           <div class="col-xs-12 col-md-6">
             <ul class="skills_ul">
-              <!-- <li>Build an advanced web application as part of an agile team</li> -->
-              <li>Learn and apply Object Oriented Programming, MVC, and test driven development</li>
+              <li>Solve difficult real coding interview problems and build up your problem solving skills</li>
+              <li>Learn and apply Object Oriented Programming, MVC, and Test Driven Development</li>
+              <li>Learn how to use Github to collaborate with other developers</li>
               <li>Meet Like-minded Individuals who are passionate about coding</li>
             </ul>
           </div>
