--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -26,6 +26,14 @@ tr {
   }
 }
 
+.techrise_list {
+  list-style-type: none;
+  li {
+    padding: 10px;
+  }
+}
+
+
 .btn-fixed-archive {
   width: 90px;
 }
