add lesson descriptions

--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -101,7 +101,7 @@
 <div class="row">
 	<%= render partial: 'course', locals: {course: 'Algorithms', course_name: 'Learning how to solve algorithms challenges will help you think logically and solve difficult problems in programming.', available: false, controller_name: 'AlgorithmLesson', course_link: algorithm_path, course_access: 'algorithm' } %>
 
-	<%= render partial: 'course', locals: {course: 'Skill Academy', course_name: '', available: false, controller_name: 'SkillAcademyLesson', course_link: skill_academy_path, course_access: 'skill_academy' } %>
+	<%= render partial: 'course', locals: {course: 'Skill Academy - A Platform to Share your Skills', course_name: '', available: false, controller_name: 'SkillAcademyLesson', course_link: skill_academy_path, course_access: 'skill_academy' } %>
 
 	<%= render partial: 'course', locals: {course: 'Team Collaboration', course_name: '', available: false, controller_name: 'CollaborationLesson', course_link: collaboration_path, course_access: 'collaboration' } %>
 </div>
