--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,8 +1,8 @@
 <%= link_to '< Back to Courses', courses_path %>
 
-<h1 class="curriculum_title"><%= @course_title %></h1>
+<h1 class="curriculum_title"><%= @current_course_title %></h1>
 
-  <% @lessons.each_with_index do |chapter, i| %>
+  <% @current_course_lessons.each_with_index do |chapter, i| %>
     <% if (i + 1) % 3 == 0 %>
       <div class = "row">
     <% end %>
@@ -15,7 +15,7 @@
 
         <div class="course_description">
           <% chapter[1].each do |lesson| %>
-            <%= link_to "<li> Lesson #{lesson[0]} - #{lesson[1]} #{lesson_completed(lesson[0])}</li>".html_safe, "/#{@course_link}/#{(lesson[0])}" %>
+            <%= link_to "<li> Lesson #{lesson[0]} - #{lesson[1]} #{lesson_completed(lesson[0])}</li>".html_safe, "/#{@current_course_link}/#{(lesson[0])}" %>
           <% end %>
         </div><!-- course_description -->
       </div><!-- course_box -->
