move application view pages to lessons folder

--- a/app/views/layouts/lesson.html.erb
+++ b/app/views/layouts/lesson.html.erb
@@ -24,7 +24,7 @@
 
   </div>
   <% if user_signed_in? && (params[:id].present?) && (controller_name.classify.include? "Lesson") %>
-    <%= render '/application/selection' %>
+    <%= render '/lessons/selection' %>
   <% end %>
 
   <%= render '/layouts/lesson_footer' %>
