--- a/app/views/submissions/_student_submissions.html.erb
+++ b/app/views/submissions/_student_submissions.html.erb
@@ -1,9 +1,9 @@
-<% if @submissions.pluck(:user_id).uniq.count == 0 %>
+<% if @current_lesson_approved_submissions.count == 0 %>
   <h5 class="text-center">No submissions have been made for this assignment yet.</h5>
 <% else %>
-  <h5 class="text-center" style="line-height: 2 !important;"><%= pluralize @submissions.pluck(:user_id).uniq.count, "student" %> including
-    <% @submission_user_ids.each do |i| %>
-      <label class="label label-default" style="margin: 0px 2px;"><%= User.find(i).name %></label>
+  <h5 class="text-center" style="line-height: 2 !important;"><%= pluralize @current_lesson_approved_submissions.count, "student" %> including
+    <% @current_lesson_approved_submissions.each do |submission| %>
+      <label class="label label-default" style="margin: 0px 2px;"><%= submission.user_name %></label>
     <% end %>
     have passed this assignment.
   </h5>
