--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -6,6 +6,11 @@
  * Twitter: @3rdwave_themes
 */
 /* ======= Base ======= */
+html, body {
+  position: relative
+  height: auto
+}
+
 body {
   /*font-family: 'Roboto', arial, sans-serif;*/
   /*font-family: "Open Sans", sans-serif;*/
