--- a/app/views/progressions/create.js.erb
+++ b/app/views/progressions/create.js.erb
@@ -4,7 +4,7 @@ $('#progression_form').hide();
 $('#hidden_progression_form').hide();
 $('#hidden_delete_progression_form').show();
 
-$('#sidebar_container').html('<%= escape_javascript render partial: "sidebar" %>');
+$('#sidebar_container').html('<%= escape_javascript render partial: "lessons/sidebar" %>');
 
 // add .active to current lesson
 var url = window.location;
