--- a/app/views/progressions/destroy.js.erb
+++ b/app/views/progressions/destroy.js.erb
@@ -5,7 +5,7 @@ $('#hidden_delete_progression_form').hide();
 
 $('#hidden_progression_form').show();
 
-$('#sidebar_container').html('<%= escape_javascript render partial: "sidebar" %>');
+$('#sidebar_container').html('<%= escape_javascript render partial: "lessons/sidebar" %>');
 
 
 // add .active to current lesson
