--- a/app/views/progressions/create.js.erb
+++ b/app/views/progressions/create.js.erb
@@ -6,42 +6,5 @@ $('#hidden_delete_progression_form').show();
 
 $('#sidebar_container').html('<%= escape_javascript render partial: "lessons/sidebar" %>');
 
-// add .active to current lesson
-var url = window.location;
-
-// Will only work if string in href matches with location
-$('ul.nav a[href="'+ url +'"]').parent().addClass('active');
-
-// Will also work for relative and absolute hrefs
-$('ul.nav a').filter(function() {
-    return this.href == url
-}).parent().addClass('active');
-
-$('ul.nav a').filter(function() {
-    return this.href == url
-}).parent().parent().addClass('collapse in');
-
-$('ul.nav a').filter(function() {
-    return this.href == url
-}).parent().parent().parent().closest('li').find('a').attr('aria-expanded', 'true');
-
-// scroll to current lesson
-var ready;
-ready = function() {
-
-  var target = document.getElementsByClassName("active");
-  target[0].parentNode.scrollTop = target[0].offsetTop; 
-
-  $("#slider").slideReveal({
-    trigger: $(".trigger"),
-    position: "right",
-    width: 350,
-    speed: 700,
-    top: 0
-  });
-
-};
-
-$(document).ready(ready);
-$(document).on('page:load', ready);
+show_page_trigger();
 
