--- a/app/views/instapost_lessons/lessons/lesson_13.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_13.html.erb
@@ -13,7 +13,7 @@ resources :posts
 </code></pre>
 
 <p>
-  As we've seen in earlier lessons, this will provide a bunch of routes that we can use for posts. It provides us with the routes for the <code>index</code>, <code>create</code>, <code>new</code>, <code>edit</code>, <code>show</code>, <code>update</code>, and <code>destroy</code> actions. Review "resources" section in <%= link_to 'Instapost- Creating a Form', 'ideator_lessons/12' %>.
+  As we've seen in earlier lessons, this will provide a bunch of routes that we can use for posts. It provides us with the routes for the <code>index</code>, <code>create</code>, <code>new</code>, <code>edit</code>, <code>show</code>, <code>update</code>, and <code>destroy</code> actions. Review "resources" section in <%= link_to 'Instapost- Creating a Form', '/ideator_lessons/12' %>.
 </p>
 
 <p>
@@ -25,7 +25,7 @@ resources :posts
 </p>
 
 <p>
-  Woops! Rails is giving us the "Missing Template" error! (Go to <%= link_to 'this lesson', 'instapost_lessons/10' %> to review what this error means.) We can either redirect the user or make the corresponding view file. In this case, let's go ahead and make it.
+  Woops! Rails is giving us the "Missing Template" error! (Go to <%= link_to 'this lesson', '/instapost_lessons/10' %> to review what this error means.) We can either redirect the user or make the corresponding view file. In this case, let's go ahead and make it.
 </p>
 
 <p>
