revise collaboration lessons

--- a/app/views/instapost_lessons/lessons/lesson_9.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_9.html.erb
@@ -47,7 +47,7 @@ rails generate model post
 
 
 <p>
-  Navigate yourself to the migration file named something like <code>xxxxxxxxxxx_create_posts.rb</code>.
+  The migration file will be a file named something like <code>xxxxxxxxxxx_create_posts.rb</code>.
 </p>
 
 <p>
