fix course access

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -69,7 +69,7 @@
 
 <div class = "row">
 
-  <%= render partial: 'course', locals: {course: 'Ruby Fundamentals', course_name: 'Ruby is a beautiful programming language that makes programming so much easier for beginners. Master the fundamentals of programming while learning Ruby.', available: true, course_link: ruby_path, course_access: 'ruby_fundamentals', controller_name: 'RubyLesson'} %>
+  <%= render partial: 'course', locals: {course: 'Ruby Fundamentals', course_name: 'Ruby is a beautiful programming language that makes programming so much easier for beginners. Master the fundamentals of programming while learning Ruby.', available: true, course_link: ruby_path, course_access: 'ruby', controller_name: 'RubyLesson'} %>
 
   <%= render partial: 'course', locals: {course: 'Master the Command Line', course_name: '', available: true, course_link: command_line_path, course_access: 'command_line', controller_name: 'CommandLineLesson'} %>
 
