revise instapost lesson

--- a/app/views/instapost_lessons/lessons/lesson_14.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_14.html.erb
@@ -254,7 +254,7 @@ before_action :authenticate_user!, only: [:new, :create]
 </p>
 
 <pre><code class="ruby">
-validates :photo, :description :user_id, presence: true
+validates :photo, :description, :user_id, presence: true
 </code></pre>
 
 <p>
@@ -268,7 +268,7 @@ class Post &lt; ActiveRecord::Base
   
   mount_uploader :photo, PhotoUploader
 
-  validates :photo, :description :user_id, presence: true
+  validates :photo, :description, :user_id, presence: true
 end
 </code></pre>
 
