revise instapost lessons

--- a/app/views/instapost_lessons/lessons/lesson_7.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_7.html.erb
@@ -63,6 +63,10 @@ mount_uploader :photo, PhotoUploader
 
 <pre><code class="ruby">
 class User &lt; ActiveRecord::Base
+  # Include default devise modules. Others available are:
+  # :confirmable, :lockable, :timeoutable and :omniauthable
+  devise :database_authenticatable, :registerable,
+         :recoverable, :rememberable, :trackable, :validatable, :confirmable
   mount_uploader :photo, PhotoUploader
 end
 </code></pre>
