--- a/app/views/submission_replies/edit.html.erb
+++ b/app/views/submission_replies/edit.html.erb
@@ -19,7 +19,7 @@
     </div>
 
     <br>
-    <%= f.submit 'Submit', class: 'btn btn-primary' %>
+    <%= f.submit 'Submit', class: 'btn btn-primary', data: {disable_with: "Updating reply..."} %>
   <% end %>
 
 </div>
