--- a/app/assets/stylesheets/hints.scss
+++ b/app/assets/stylesheets/hints.scss
@@ -5,8 +5,6 @@
 }
 
 
-
-
 @mixin hint-buttons {
   background: white;
   border: 2px solid #dddddd;
@@ -19,19 +17,16 @@
   @include hint-buttons;
 }
 
-.btn-show-hints {
+.btn-gotcha {
   @include hint-buttons;
 }
-
-
-
 
 
 .hint-activated {
   background-color: #d9edf7;
 }
 
-.hint {
+@mixin hint-gotchas {
   display: none;
   padding: 20px;
   -webkit-transition: all 3s ease-out;  /* Saf3.2+, Chrome */
@@ -39,4 +34,12 @@
       -ms-transition: all 3s ease-out;  /* IE10 */
        -o-transition: all 3s ease-out;  /* Opera 10.5+ */
           transition: all 3s ease-out;
+}
+
+.hint {
+  @include hint-gotchas;
+}
+
+.gotcha {
+  @include hint-gotchas;
 }
