--- a/app/views/skill_academy_lessons/show.html.erb
+++ b/app/views/skill_academy_lessons/show.html.erb
@@ -24,6 +24,13 @@
       <%= render partial: '/cards/widget' %>
 
       <%= render file: "app/views/#{@current_course_link}/lessons/lesson_#{@current_lesson_id}" %>
+
+      <div class="hint-prompt">
+        <h5>Think you have the solution?</h5>
+        <button class="btn btn-gotcha" data-gotcha-id="1"><i class="fa fa-check" aria-hidden="true"></i> I've solved it myself</button>
+        <button class="btn btn-hint" data-hint-id="1"><i class="fa fa-question" aria-hidden="true"></i> Give me a hint!</button>
+      </div>
+
       <br class = "clear">
 
       <%= render 'lesson_nav_section' %>
@@ -41,42 +48,59 @@
 </div>
 
 <script type="text/javascript">
-$(".btn-show-hints").on("click", function(){
-  var hint = $(".hint");
-  hint.fadeIn();
-  hint.addClass("hint-activated");
-  window.setTimeout(function(){
-    hint.removeClass("hint-activated");
-  }, 10000);
+var hints;
+var hints = {
+  show_next: function(el, dataEl){
+    var id, content, hint_id, content_class_name;
+
+    id = el.data(dataEl);
+    next_id = id + 1;
+
+    // get class name of element to display
+    content_class_name = dataEl.slice(0, -3);
+
+    content = $("." + content_class_name +  "[data-" + dataEl + "=" + id + "]");
+
+    this.show_hint(content);
+
+    // update data-hint-id of hint button
+    el.data(dataEl, next_id);
+
+    // if there are no more hints, disable button
+    if ($("." + content_class_name +  "[data-" + dataEl + "=" + next_id + "]").length === 0) {    
+      el.prop("disabled", true);
+    }
+
+    // scroll to hint
+    $('html,body').animate({ 
+        scrollTop: content.offset().top - 50
+    }, 800);    
+  },
+  show_all: function(){
+    this.show_hint($(".hint"));
+    $(".btn-hint").prop("disabled", true);
+    $(".btn-gotcha").prop("disabled", true);
+  },
+  show_hint: function(el){
+    el.fadeIn();
+    el.addClass("hint-activated");
+    window.setTimeout(function(){
+      el.removeClass("hint-activated");
+    }, 10000);
+  }
+}  
+
+
+$(".btn-gotcha").on("click", function(){
+  if ($(".gotcha[data-gotcha-id="+ $(this).data("gotcha-id") + 1 + "]").length === 0) {
+    hints.show_all();
+  } else {
+    hints.show_next($(this), "gotcha-id");  
+  }  
 });
 
 $(".btn-hint").on("click", function(){
-  var hint_id, hint_content, next_hint_id;
-
-  hint_id = $(this).data("hint-id");
-  next_hint_id = hint_id + 1;
-  hint_content = $(".hint[data-hint-id=" + hint_id + "]");
-
-  hint_content.fadeIn();
-
-  // update data-hint-id of hint button
-  $(this).data("hint-id", next_hint_id);
-
-  // if there is no more hints, disable button
-  if ($(".hint[data-hint-id=" + next_hint_id + "]").length === 0) {
-    $(this).prop("disabled", true);
-    $(".btn-show-hints").prop("disabled", true);
-  }
-
-  // scroll to hint
-  $('html,body').animate({ 
-      scrollTop: hint_content.offset().top - 50
-  }, 800);
-
-  hint_content.addClass("hint-activated");
-  window.setTimeout(function(){
-    hint_content.removeClass("hint-activated");
-  }, 10000);
+  hints.show_next($(this), "hint-id");
 });
 
 $(document).on('turbolinks:load', show_page_trigger);
