--- a/app/views/skill_academy_lessons/lessons/lesson_8.html.erb
+++ b/app/views/skill_academy_lessons/lessons/lesson_8.html.erb
@@ -30,7 +30,7 @@ gem 'factory_girl_rails'
 </div>
 
 <div class="gotcha" data-gotcha-id="1">
-  <p class="alert">
+  <p class="alert alert-danger">
     Before we can start using FactoryGirl, we should set up a <code>factories</code> folder in the <code>spec</code> directory, according to the documentation.
   </p>
 </div>
