--- a/app/views/skill_academy_lessons/lessons/lesson_2.html.erb
+++ b/app/views/skill_academy_lessons/lessons/lesson_2.html.erb
@@ -4,8 +4,10 @@
   As always, let's start off by creating a new Rails application. You know how to do this by now! :)
 </p>
 
-<h2>Tasks to Complete</h2>
+<div class="task-box">
+  <h2>Tasks</h2>
 
-<ul>
-  <li>Create new Rails application with Postgresql database</li>
-</ul>
+  <ul>
+    <li>Create new Rails application with Postgresql database</li>
+  </ul>
+</div>
