--- a/app/views/skill_academy_lessons/lessons/lesson_3.html.erb
+++ b/app/views/skill_academy_lessons/lessons/lesson_3.html.erb
@@ -4,10 +4,12 @@
   Next, let's set up Git/Github and Heroku.
 </p>
 
-<h2>Tasks to Complete</h2>
+<div class="task-box">
+  <h2>Tasks</h2>
 
-<ul>
-  <li>Create new Github repository</li>
-  <li>Push new Rails application to Github repository</li>
-  <li>Push application live to heroku</li>
-</ul>
+  <ul>
+    <li>Create new Github repository</li>
+    <li>Push new Rails application to Github repository</li>
+    <li>Push application live to heroku</li>
+  </ul>
+</div>
