--- a/app/views/skill_academy_lessons/lessons/lesson_4.html.erb
+++ b/app/views/skill_academy_lessons/lessons/lesson_4.html.erb
@@ -4,11 +4,13 @@
   For this project, let's set up continuous integration so that we have automated builds and can make sure that everything is passing before we push it up live.
 </p>
 
-<h2>Tasks</h2>
-<ul>
-  <li>Integrate Travis CI</li>
-  <li>Write build script</li>
-</ul>
+<div class="task-box">
+  <h2>Tasks</h2>
+  <ul>
+    <li>Integrate Travis CI</li>
+    <li>Write build script</li>
+  </ul>
+</div>
 
 <div class="hint" data-hint-id="1">
   <p>
