--- a/app/views/skill_academy_lessons/lessons/lesson_7.html.erb
+++ b/app/views/skill_academy_lessons/lessons/lesson_7.html.erb
@@ -4,10 +4,12 @@
   Let's install RSpec into our application so that we can develop the application using TDD.
 </p>
 
-<h2>Tasks</h2>
-<ul>
-  <li>Install RSpec</li>
-</ul>
+<div class="task-box">
+  <h2>Tasks</h2>
+  <ul>
+    <li>Install RSpec</li>
+  </ul>
+</div>
 
 <div class="hint" data-hint-id="1">
   <p>
