--- a/app/views/skill_academy_lessons/lessons/lesson_8.html.erb
+++ b/app/views/skill_academy_lessons/lessons/lesson_8.html.erb
@@ -1,13 +1,15 @@
-<h1><%= title_for(SkillAcademyLesson, 2, 3) %></h1> 
+<h1><%= title_for(SkillAcademyLesson, 2, 4) %></h1> 
 
 <p>
   Next, let's set up FactoryGirl.
 </p>
 
-<h2>Tasks</h2>
-<ul>
-  <li>Setup FactoryGirl</li>
-</ul>
+<div class="task-box">
+  <h2>Tasks</h2>
+  <ul>
+    <li>Setup FactoryGirl</li>
+  </ul>
+</div>
 
 <div class="hint" data-hint-id="1">
   <p>
