--- a/app/views/skill_academy_lessons/lessons/lesson_9.html.erb
+++ b/app/views/skill_academy_lessons/lessons/lesson_9.html.erb
@@ -1,4 +1,4 @@
-<h1><%= title_for(SkillAcademyLesson, 2, 4) %></h1> 
+<h1><%= title_for(SkillAcademyLesson, 2, 5) %></h1> 
 
 
 <p>
@@ -41,11 +41,13 @@ end
   <small>http://pryrepl.org/</small>
 </blockquote>
 
-<h2>Tasks</h2>
-<ul>
-  <li>Read about Pry <%= link_to 'here', 'http://pryrepl.org/', target: "_blank" %></li>
-  <li>Install pry-rails gem</li>  
-</ul>
+<div class="task-box">
+  <h2>Tasks</h2>
+  <ul>
+    <li>Read about Pry <%= link_to 'here', 'http://pryrepl.org/', target: "_blank" %></li>
+    <li>Install pry-rails gem</li>  
+  </ul>
+</div>
 
 <div class="hint" data-hint-id="1">
   <p>
