--- a/app/assets/stylesheets/hints.scss
+++ b/app/assets/stylesheets/hints.scss
@@ -1,3 +1,9 @@
+.task-box {
+  background: whitesmoke;
+  padding: 20px;
+  margin: 20px 0px;
+}
+
 .hint-prompt {
   margin-top: 30px;
   margin-bottom: 30px;
