--- a/app/views/skill_academy_lessons/lessons/lesson_5.html.erb
+++ b/app/views/skill_academy_lessons/lessons/lesson_5.html.erb
@@ -1,7 +1,8 @@
 <h1><%= title_for(SkillAcademyLesson, 2, 1) %></h1> 
 
-<h2>Tasks</h2>
-<ul>
-  <li>Install bootstrap into the application</li>
-</ul>
-
+<div class="task-box">
+  <h2>Tasks</h2>
+  <ul>
+    <li>Install bootstrap into the application</li>
+  </ul>
+</div>
