--- a/app/views/skill_academy_lessons/lessons/lesson_6.html.erb
+++ b/app/views/skill_academy_lessons/lessons/lesson_6.html.erb
@@ -1,9 +1,11 @@
 <h1><%= title_for(SkillAcademyLesson, 2, 2) %></h1> 
 
-<h2>Tasks</h2>
-<ul>
-  <li>Install the <code>simple_form</code> gem and integrate it with bootstrap</li>  
-</ul>
+<div class="task-box">
+  <h2>Tasks</h2>
+  <ul>
+    <li>Install the <code>simple_form</code> gem and integrate it with bootstrap</li>  
+  </ul>
+</div>
 
 <div class="hint" data-hint-id="1">
   <p>
